--- a/projects/web/src/app/admin/users/roles/roles.component.html
+++ b/projects/web/src/app/admin/users/roles/roles.component.html
@@ -4,11 +4,11 @@
     <div class="btn-group btn-group-sm">
       <button class="btn btn-sm btn-outline-primary" type="button"
         (click)="save()">
-        <svg-icon path="bi/check"></svg-icon> 确定
+        <svg-icon iconPath="bi/check"></svg-icon> 确定
       </button>
       <button class="btn btn-sm btn-outline-secondary" type="button"
         (click)="cancel()">
-        <svg-icon path="bi/x"></svg-icon> 取消
+        <svg-icon iconPath="bi/x"></svg-icon> 取消
       </button>
     </div>
   </div>
@@ -29,11 +29,11 @@
     *ngIf="info.privileges['app_users.update'] && editable">
     <button class="btn btn-sm btn-outline-primary" type="button"
       (click)="save()">
-      <svg-icon path="bi/check"></svg-icon> 保存
+      <svg-icon iconPath="bi/check"></svg-icon> 保存
     </button>
     <button class="btn btn-sm btn-outline-secondary" type="button"
       (click)="cancel()">
-      <svg-icon path="bi/x"></svg-icon> 取消
+      <svg-icon iconPath="bi/x"></svg-icon> 取消
     </button>
   </div>
 </div>
