--- a/projects/web/src/app/common/nav-item/nav-item.component.html
+++ b/projects/web/src/app/common/nav-item/nav-item.component.html
@@ -1,5 +1,5 @@
 <a class="nav-link" routerLinkActive="active" [routerLink]="node.url">
-  <svg-icon class="nav-icon ms-2" [path]="node.icon"></svg-icon>
+  <svg-icon class="nav-icon ms-2" [iconPath]="node.icon"></svg-icon>
   <span class="ms-1" *ngIf="!sidebarCollapsed">{{node.title}}</span>
 </a>
 
