--- a/projects/web/src/app/admin/nav-items/detail/detail.component.html
+++ b/projects/web/src/app/admin/nav-items/detail/detail.component.html
@@ -5,11 +5,11 @@
       <button *ngIf="info.privileges['app_privileges.update'] && editable"
         type="button" class="btn btn-sm btn-outline-primary"
         (click)="save()" [disabled]="!detailForm.valid">
-        <svg-icon path="bi/check"></svg-icon> 保存
+        <svg-icon iconPath="bi/check"></svg-icon> 保存
       </button>
       <button type="button" class="btn btn-sm btn-outline-secondary"
         (click)="cancel()">
-        <svg-icon path="bi/x"></svg-icon> 取消
+        <svg-icon iconPath="bi/x"></svg-icon> 取消
       </button>
     </div>
   </div>
@@ -95,7 +95,7 @@
               <button class="btn btn-outline-secondary" type="button"
                 ngbTooltip="从图标库查找图标" [openDelay]="300"
                 (click)="showIconDialog()">
-                <svg-icon path="bi/search"></svg-icon>
+                <svg-icon iconPath="bi/search"></svg-icon>
               </button>
             </ng-container>
           </div>
@@ -134,11 +134,11 @@
     class="card-footer d-flex justify-content-between">
     <button type="button" class="btn btn-sm btn-outline-primary"
       (click)="save()" [disabled]="!detailForm.valid">
-      <svg-icon path="bi/check"></svg-icon> 保存
+      <svg-icon iconPath="bi/check"></svg-icon> 保存
     </button>
     <button type="button" class="btn btn-sm btn-outline-secondary"
       (click)="cancel()">
-      <svg-icon path="bi/x"></svg-icon> 取消
+      <svg-icon iconPath="bi/x"></svg-icon> 取消
     </button>
   </div>
 </form>
