--- a/projects/web/src/app/admin/roles/detail/detail.component.html
+++ b/projects/web/src/app/admin/roles/detail/detail.component.html
@@ -4,11 +4,11 @@
     <div class="btn-group btn-group-sm">
       <button *ngIf="editable" type="button" class="btn btn-sm btn-outline-primary"
         (click)="save()" [disabled]="!detailForm.valid">
-        <svg-icon path="bi/check"></svg-icon> 保存
+        <svg-icon iconPath="bi/check"></svg-icon> 保存
       </button>
       <button type="button" class="btn btn-sm btn-outline-secondary"
         (click)="cancel()">
-        <svg-icon path="bi/x"></svg-icon> 取消
+        <svg-icon iconPath="bi/x"></svg-icon> 取消
       </button>
     </div>
   </div>
@@ -65,10 +65,10 @@
   <div *ngIf="editable" class="card-footer d-flex justify-content-between">
     <button type="button" class="btn btn-sm btn-outline-primary"
       (click)="save()" [disabled]="!detailForm.valid">
-      <svg-icon path="bi/check"></svg-icon> 保存
+      <svg-icon iconPath="bi/check"></svg-icon> 保存
     </button>
     <button type="button" class="btn btn-sm btn-outline-secondary" (click)="cancel()">
-      <svg-icon path="bi/x"></svg-icon> 取消
+      <svg-icon iconPath="bi/x"></svg-icon> 取消
     </button>
   </div>
 </form>
