--- a/projects/web/src/app/admin/roles/list/list.component.html
+++ b/projects/web/src/app/admin/roles/list/list.component.html
@@ -14,11 +14,11 @@
           <div class="btn-group btn-group-sm">
             <button *ngIf="info.privileges['app_roles.create']" type="button" class="btn btn-outline-primary"
               (click)="showDetail('0', true)">
-              <svg-icon path="bi/plus"></svg-icon> 新建角色
+              <svg-icon iconPath="bi/plus"></svg-icon> 新建角色
             </button>
             <button type="button" class="btn btn-outline-secondary"
               (click)="loadData()">
-              <svg-icon path="bi/arrow-repeat"></svg-icon> 刷新
+              <svg-icon iconPath="bi/arrow-repeat"></svg-icon> 刷新
             </button>
           </div>
         </div>
@@ -29,7 +29,7 @@
                 <div class="col-auto text-muted px-2 py-1">全部角色， 共 {{vm.total | async}} 条记录</div>
                 <div class="col-auto text-muted px-2">
                   <ng-container *ngIf="vm.loading">
-                    <svg-icon path="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 加载中...
+                    <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 加载中...
                   </ng-container>
                 </div>
               </div>
@@ -73,26 +73,26 @@
                       class="btn btn-outline-secondary" ngbTooltip="详情"
                       placement="top" [openDelay]="300" container="body"
                       (click)="showDetail(item.id, false)">
-                      <svg-icon path="bi/info-square"></svg-icon>
+                      <svg-icon iconPath="bi/info-square"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_roles.update']"
                       class="btn btn-outline-secondary" ngbTooltip="编辑"
                       placement="top" [openDelay]="300" container="body"
                       (click)="showDetail(item.id, true)">
-                      <svg-icon path="bi/pencil-square"></svg-icon>
+                      <svg-icon iconPath="bi/pencil-square"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_roles.read_role_privileges']"
                       class="btn btn-outline-secondary" ngbTooltip="角色权限"
                       placement="top" [openDelay]="300" container="body"
                       (click)="showPrivileges(item)">
-                      <svg-icon path="bi/shield-lock"></svg-icon>
+                      <svg-icon iconPath="bi/shield-lock"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_roles.delete']"
                       class="btn btn-outline-secondary" ngbTooltip="删除"
                       placement="top" [openDelay]="300" container="body"
                       (click)="delete(item.id)"
                       [disabled]="$any(item.userCount) > 0">
-                      <svg-icon path="bi/trash"></svg-icon>
+                      <svg-icon iconPath="bi/trash"></svg-icon>
                     </button>
                   </div>
                 </td>
