--- a/projects/web/src/app/admin/roles/privilege/privilege.component.html
+++ b/projects/web/src/app/admin/roles/privilege/privilege.component.html
@@ -3,7 +3,7 @@
     <h5 class="card-title mb-0">{{title}}</h5>
     <div class="btn-group btn-group-sm">
       <button type="button" class="btn btn-sm btn-outline-primary" (click)="cancel()">
-        <svg-icon path="bi/check"></svg-icon> 确定
+        <svg-icon iconPath="bi/check"></svg-icon> 确定
       </button>
     </div>
   </div>
