--- a/projects/web/src/app/admin/storages/list/list.component.html
+++ b/projects/web/src/app/admin/storages/list/list.component.html
@@ -15,11 +15,11 @@
             <button *ngIf="info.privileges['app_storages.create']"
               type="button" class="btn btn-outline-primary"
               (click)="showDetail('0', true)">
-              <svg-icon path="bi/plus"></svg-icon> 新建存储目录
+              <svg-icon iconPath="bi/plus"></svg-icon> 新建存储目录
             </button>
             <button type="button" class="btn btn-outline-secondary"
               (click)="loadData()">
-              <svg-icon path="bi/arrow-repeat"></svg-icon> 刷新
+              <svg-icon iconPath="bi/arrow-repeat"></svg-icon> 刷新
             </button>
           </div>
         </div>
@@ -44,7 +44,7 @@
                 <div class="col-auto text-muted px-2 py-1">条记录</div>
                 <div class="col-auto text-muted px-2">
                   <ng-container *ngIf="vm.loading">
-                    <svg-icon path="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 加载中...
+                    <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 加载中...
                   </ng-container>
                 </div>
               </div>
@@ -65,7 +65,7 @@
                       (keyup.enter)="onKeywordsChanged()">
                     <button *ngIf="vm.searchModel.keywords" class="btn btn-outline-secondary" type="button"
                       (click)="clearKeywords()">
-                      <svg-icon path="bi/x"></svg-icon>
+                      <svg-icon iconPath="bi/x"></svg-icon>
                     </button>
                   </div>
                 </div>
@@ -97,17 +97,17 @@
                     <button *ngIf="info.privileges['app_storages.read_by_id']"
                       class="btn btn-outline-secondary" ngbTooltip="详情" placement="top" [openDelay]="300" container="body"
                       (click)="showDetail(item.id, false)">
-                      <svg-icon path="bi/info-square"></svg-icon>
+                      <svg-icon iconPath="bi/info-square"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_storages.update']"
                       class="btn btn-outline-secondary" ngbTooltip="编辑" placement="top" [openDelay]="300" container="body"
                       (click)="showDetail(item.id, true)">
-                      <svg-icon path="bi/pencil-square"></svg-icon>
+                      <svg-icon iconPath="bi/pencil-square"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_storages.delete']"
                       class="btn btn-outline-secondary" ngbTooltip="删除" placement="top" [openDelay]="300" container="body"
                       (click)="delete(item.id)">
-                      <svg-icon path="bi/trash"></svg-icon>
+                      <svg-icon iconPath="bi/trash"></svg-icon>
                     </button>
                   </div>
                 </td>
