--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -14,7 +14,7 @@
               <div class="btn-group btn-group-sm">
                 <button type="button" class="btn btn-outline-secondary"
                   (click)="loadOrganizeUnit()">
-                  <svg-icon path="bi/arrow-repeat"></svg-icon>
+                  <svg-icon iconPath="bi/arrow-repeat"></svg-icon>
                 </button>
               </div>
           </div>
@@ -30,11 +30,11 @@
             <div class="btn-group btn-group-sm">
               <button *ngIf="info.privileges['app_users.create']" type="button" class="btn btn-outline-primary"
                 (click)="showDetail('0', true)">
-                <svg-icon path="bi/plus"></svg-icon> 新建用户
+                <svg-icon iconPath="bi/plus"></svg-icon> 新建用户
               </button>
               <button type="button" class="btn btn-outline-secondary"
                 (click)="loadData()">
-                <svg-icon path="bi/arrow-repeat"></svg-icon> 刷新
+                <svg-icon iconPath="bi/arrow-repeat"></svg-icon> 刷新
               </button>
             </div>
         </div>
@@ -60,7 +60,7 @@
                 <div class="col-auto text-muted px-2 py-1">条记录</div>
                 <div class="col-auto text-muted px-2">
                   <ng-container *ngIf="vm.loading">
-                    <svg-icon path="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 加载中...
+                    <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 加载中...
                   </ng-container>
                 </div>
               </div>
@@ -85,7 +85,7 @@
                       (keyup.enter)="vm.search()" />
                     <button class="btn btn-sm btn-outline-secondary" type="button"
                       *ngIf="vm.searchModel.userName" (click)="cleanUserSearch()">
-                      <svg-icon path="bi/x"></svg-icon>
+                      <svg-icon iconPath="bi/x"></svg-icon>
                     </button>
                   </div>
                 </div>
@@ -134,49 +134,49 @@
                       *ngIf="info.privileges['app_users.read']"
                       ngbTooltip="详情" placement="top" [openDelay]="300"
                       (click)="showDetail(item.id, false)">
-                      <svg-icon path="bi/info-square"></svg-icon>
+                      <svg-icon iconPath="bi/info-square"></svg-icon>
                     </button>
                     <div class="btn-group btn-group-sm" *ngIf="canViewGears()"
                       ngbDropdown container="body">
                       <button class="btn btn-outline-secondary" type="button"
                         ngbTooltip="用户操作" placement="top" container="body" [openDelay]="300"
                         ngbDropdownToggle>
-                        <svg-icon path="bi/three-dots"></svg-icon>
+                        <svg-icon iconPath="bi/three-dots"></svg-icon>
                       </button>
                       <div class="dropdown-menu" ngbDropdownMenu>
                         <button class="text-muted" type="button" ngbDropdownItem
                           *ngIf="info.privileges['app_users.update']"
                           (click)="showDetail(item.id, true)">
-                          <svg-icon path="bi/pencil-square"></svg-icon> 编辑
+                          <svg-icon iconPath="bi/pencil-square"></svg-icon> 编辑
                         </button>
                         <ng-container *ngIf="isLockout(item);else lockTpl">
                           <button class="text-muted" type="button" ngbDropdownItem
                             *ngIf="info.privileges['app_users.unlock']"
                             (click)="vm.unlockUser(item.id)">
-                            <svg-icon path="bi/unlock"></svg-icon> 解锁
+                            <svg-icon iconPath="bi/unlock"></svg-icon> 解锁
                           </button>
                         </ng-container>
                         <ng-template #lockTpl>
                           <button class="text-muted" type="button" ngbDropdownItem
                             *ngIf="info.privileges['app_users.lock']"
                             (click)="showLock(item)">
-                            <svg-icon path="bi/lock"></svg-icon> 锁定
+                            <svg-icon iconPath="bi/lock"></svg-icon> 锁定
                           </button>
                         </ng-template>
                         <button class="text-muted" type="button" ngbDropdownItem
                           *ngIf="info.privileges['app_users.reset_pass']"
                           (click)="showPassword(item)">
-                          <svg-icon path="bi/key"></svg-icon> 重置密码
+                          <svg-icon iconPath="bi/key"></svg-icon> 重置密码
                         </button>
                         <button class="text-muted" type="button" ngbDropdownItem
                           *ngIf="info.privileges['app_users.read_user_roles']"
                           (click)="showRoles(item)">
-                          <svg-icon path="bi/shield-check"></svg-icon> 角色
+                          <svg-icon iconPath="bi/shield-check"></svg-icon> 角色
                         </button>
                         <button class="text-muted" type="button" ngbDropdownItem
                           *ngIf="info.privileges['app_users.delete']"
                           (click)="delete(item.id)">
-                          <svg-icon path="bi/trash"></svg-icon> 删除
+                          <svg-icon iconPath="bi/trash"></svg-icon> 删除
                         </button>
                       </div>
                     </div>
