--- a/projects/web/src/app/admin/users/password/password.component.html
+++ b/projects/web/src/app/admin/users/password/password.component.html
@@ -6,11 +6,11 @@
       <button class="btn btn-outline-primary" type="button"
         *ngIf="info.privileges['app_users.reset_pass']"
         [disabled]="!form.valid" (click)="save()">
-        <svg-icon path="bi/check"></svg-icon> 保存
+        <svg-icon iconPath="bi/check"></svg-icon> 保存
       </button>
       <button class="btn btn-outline-secondary" type="button"
         (click)="cancel()">
-        <svg-icon path="bi/x"></svg-icon> 取消
+        <svg-icon iconPath="bi/x"></svg-icon> 取消
       </button>
     </div>
   </div>
