--- a/projects/web/src/app/common/nav-topbar/nav-topbar.component.html
+++ b/projects/web/src/app/common/nav-topbar/nav-topbar.component.html
@@ -2,7 +2,7 @@
   *ngIf="navigation.root | async as root">
   <div class="container-fluid">
   <a class="navbar-brand" [routerLink]="root.url">
-    <svg-icon path="bi/app-indicator" iconClass="bi bi-lg"></svg-icon>
+    <svg-icon iconPath="bi/app-indicator" iconClass="bi bi-lg"></svg-icon>
     {{root.title}}
   </a>
   <button class="navbar-toggler" type="button" (click)="collapsed = !collapsed"
@@ -27,12 +27,12 @@
           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="account-dropdown" ngbDropdownMenu>
             <ng-container *ngIf="navigation.accountNodes | async as ans">
               <a *ngFor="let n of ans" ngbDropdownItem [routerLink]="n.url">
-                <svg-icon [path]="n.icon"></svg-icon> {{n.title}}
+                <svg-icon [iconPath]="n.icon"></svg-icon> {{n.title}}
               </a>
               <hr class="dropdown-divider" *ngIf="ans.length > 0" />
             </ng-container>
             <a style="cursor: pointer;" ngbDropdownItem (click)="logout($event)">
-              <svg-icon path="bi/door-open"></svg-icon> 注销
+              <svg-icon iconPath="bi/door-open"></svg-icon> 注销
             </a>
           </div>
         </li>
