--- a/projects/web/src/app/login/login/login.component.html
+++ b/projects/web/src/app/login/login/login.component.html
@@ -28,7 +28,7 @@
               [disabled]="(!loginForm.valid) || loading"
               type="button" (click)="login()">
               @if (loading) {
-                <svg-icon path="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 登录中 ...
+                <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 登录中 ...
               } @else {
                 登录
               }
