--- a/projects/web/src/app/admin/nav-items/detail/detail.component.html
+++ b/projects/web/src/app/admin/nav-items/detail/detail.component.html
@@ -1,144 +1,151 @@
-<form *ngIf="(account.info | async) as info" class="card detail" #detailForm="ngForm">
-  <div class="card-header d-flex justify-content-between align-content-center">
-    <h5 class="card-title mb-0">{{getTitle()}}</h5>
-    <div class="btn-group btn-group-sm">
+<nz-card *ngIf="(account.info | async) as info"
+  class="ant-card-data-detail m-0"
+  [nzTitle]="title" [nzExtra]="toolsTpl" [nzActions]="editable ? [okTpl, cancelTpl] : []">
+  <ng-template #toolsTpl>
+    <nz-button-group>
       <button *ngIf="info.privileges['app_privileges.update'] && editable"
-        type="button" class="btn btn-sm btn-outline-primary"
+        type="button" nz-button nzType="primary"
         (click)="save()" [disabled]="!detailForm.valid">
-        <svg-icon iconPath="bi/check"></svg-icon> 保存
+        <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 保存
       </button>
-      <button type="button" class="btn btn-sm btn-outline-secondary"
+      <button type="button" nz-button nzType="default"
         (click)="cancel()">
         <svg-icon iconPath="bi/x"></svg-icon> 取消
       </button>
-    </div>
-  </div>
-  <div class="card-body">
+    </nz-button-group>
+  </ng-template>
+  <form nz-form nzLayout="vertical" #detailForm="ngForm">
     <div class="row">
       <div class="col">
-        <div class="mb-3">
-          <label class="form-label text-muted" for="parentId">父节点 <i class="text-danger">*</i> </label>
-          <select class="form-select" id="parentId" name="parentId" required
-            [(ngModel)]="model.parentId" [disabled]="!editable">
-            <option *ngFor="let p of parents" [value]="p.id">{{p.title}}</option>
-          </select>
-        </div>
+        <nz-form-item class="mb-3">
+          <nz-form-label nzFor="parentId" [nzRequired]="true">父节点</nz-form-label>
+          <nz-form-control nzHasFeedback="true">
+            <nz-select nzId="parentId" name="parentId" [(ngModel)]="model.parentId"
+              [nzDisabled]="!editable">
+              <nz-option *ngFor="let p of parents"
+                [nzValue]="p.id" [nzLabel]="p.title!"
+              />
+            </nz-select>
+          </nz-form-control>
+        </nz-form-item>
       </div>
       <div class="col">
-        <div class="mb-3" [class.is-valid]="title.valid"
-          [class.is-invalid]="!(title.valid || title.pristine)">
-          <label class="form-label text-muted" for="title">标题 <i class="text-danger">*</i> </label>
-          <input class="form-control" type="text" id="title" name="title"
-            placeholder="请输入标题 ..." [(ngModel)]="model.title"
-            [class.is-invalid]="!(title.valid || title.pristine)"
-            [class.is-valid]="title.valid"
-            required #title="ngModel" [disabled]="!editable"
-          />
-        </div>
+        <nz-form-item>
+          <nz-form-label nzFor="title" [nzRequired]="true">标题</nz-form-label>
+          <nz-form-control [nzHasFeedback]="true">
+            <input type="text" id="title" name="title"
+               placeholder="请输入标题 ..." nz-input [(ngModel)]="model.title"
+               [required]="true" [disabled]="!editable"
+            />
+          </nz-form-control>
+        </nz-form-item>
       </div>
       <div class="col">
-        <div class="mb-3" [class.is-valid]="sequence.valid"
-          [class.is-invalid]="!(sequence.valid || sequence.pristine)">
-          <label class="form-label text-muted" for="sequence">顺序 <i class="text-danger">*</i></label>
-          <input class="form-control text-end" type="number" id="sequence" name="sequence"
-            placeholder="请输入顺序 ..." [(ngModel)]="model.sequence"
-            [class.is-invalid]="!(sequence.valid || sequence.pristine)"
-            [class.is-valid]="sequence.valid"
-            required #sequence="ngModel" [disabled]="!editable"
-          />
-        </div>
+        <nz-form-item>
+          <nz-form-label nzFor="sequence" [nzRequired]="true">顺序</nz-form-label>
+          <nz-form-control [nzHasFeedback]="true">
+            <nz-input-number class="w-100" nzId="sequence" name="sequence" nzPlaceHolder="请输入顺序 ..."
+              [(ngModel)]="model.sequence" [required]="true" [nzDisabled]="!editable">
+            </nz-input-number>
+          </nz-form-control>
+        </nz-form-item>
       </div>
     </div>
     <div class="row">
       <div class="col-4">
-        <div class="mb-3" [class.is-valid]="url.valid"
-          [class.is-invalid]="!(url.valid || url.pristine)">
-          <label class="form-label text-muted" for="target">导航窗口 <i class="text-danger">*</i> </label>
-          <select class="form-select" id="target" name="target"
-            [(ngModel)]="model.target" [disabled]="!editable">
-            <option *ngFor="let _t of targets" [value]="_t.value">{{_t.name}}</option>
-          </select>
-        </div>
+        <nz-form-item>
+          <nz-form-label nzFor="target" [nzRequired]="true">导航窗口</nz-form-label>
+          <nz-form-control [nzHasFeedback]="true">
+            <nz-select nzId="target" name="target"
+              [(ngModel)]="model.target" [disabled]="!editable">
+              <nz-option *ngFor="let _t of targets"
+                [nzValue]="_t.value" [nzLabel]="_t.name"
+              />
+            </nz-select>
+          </nz-form-control>
+        </nz-form-item>
       </div>
       <div class="col-8">
-        <div class="mb-3" [class.is-valid]="url.valid"
-          [class.is-invalid]="!(url.valid || url.pristine)">
-          <label class="form-label text-muted" for="url">导航地址 <i class="text-danger">*</i> </label>
-          <input class="form-control" type="text" id="url" name="url"
-            placeholder="请输入导航地址 ..." [(ngModel)]="model.url"
-            [class.is-invalid]="!(url.valid || url.pristine)"
-            [class.is-valid]="url.valid"
-            required #url="ngModel" [disabled]="!editable"
-          />
-        </div>
+        <nz-form-item>
+          <nz-form-label nzFor="url" [nzRequired]="true">导航地址</nz-form-label>
+          <nz-form-control [nzHasFeedback]="true">
+            <input type="text" id="url" name="url"
+              placeholder="请输入导航地址 ..." nz-input [(ngModel)]="model.url"
+              [required]="true" [disabled]="!editable"
+            />
+          </nz-form-control>
+        </nz-form-item>
       </div>
     </div>
-    <div class="mb-3" *ngIf="model.target === '_iframe'">
-      <label class="form-label text-muted" for="frame_url">内嵌窗口地址 <i class="text-danger">*</i></label>
-      <input class="form-control" type="text" id="frame_url" name="frameUrl"
-        placeholder="请输入内嵌窗口地址 ..." [(ngModel)]="model.frameUrl"
-        [class.is-invalid]="!(frameUrl.valid || frameUrl.pristine)"
-        [class.is-valid]="frameUrl.valid"
-        required #frameUrl="ngModel" [disabled]="!editable"
+    <nz-form-item *ngIf="model.target === '_iframe'">
+      <nz-form-label nzFor="frame_url" [nzRequired]="true">内嵌窗口地址</nz-form-label>
+      <nz-form-control [nzHasFeedback]="true">
+        <input type="text" id="frame_url" name="frameUrl"
+          placeholder="请输入内嵌窗口地址 ..." nz-input [(ngModel)]="model.frameUrl"
+          required [disabled]="!editable"
         />
-    </div>
+      </nz-form-control>
+    </nz-form-item>
     <div class="row">
       <div class="col-4">
-        <div class="mb-3">
-          <label class="form-label text-muted" for="icon">图标 </label>
-          <div class="input-group">
-            <input class="form-control" type="text" id="icon" name="icon"
-              placeholder="请输入图标 ..." [(ngModel)]="model.icon"
+        <nz-form-item>
+          <nz-form-label nzFor="icon">图标</nz-form-label>
+          <nz-form-control>
+            <nz-input-group nzSearch [nzAddOnAfter]="iconLibBtn">
+              <input type="text" nz-input id="icon" name="icon"
+                placeholder="请输入图标 ..." [(ngModel)]="model.icon"
+                [disabled]="!editable"
+              />
+            </nz-input-group>
+            <ng-template #iconLibBtn>
+              <ng-container *ngIf="editable && info.privileges['app_storages.read_folder_content']">
+                <button class="px-2" type="button" nz-button nzType="default" nzSearch
+                  nz-tooltip="从图标库查找图标" (click)="showIconDialog()">
+                  <svg-icon iconPath="bi/search"></svg-icon>
+                </button>
+              </ng-container>
+            </ng-template>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div class="col-8">
+        <nz-form-item>
+          <nz-form-label nzFor="tooltip">提示文字 </nz-form-label>
+          <nz-form-control>
+            <input type="text" id="tooltip" name="tooltip"
+              placeholder="请输入提示文字 ..."  nz-input [(ngModel)]="model.tooltip"
               [disabled]="!editable"
             />
-            <ng-container *ngIf="editable && info.privileges['app_storages.read_folder_content']">
-              <button class="btn btn-outline-secondary" type="button"
-                ngbTooltip="从图标库查找图标" [openDelay]="300"
-                (click)="showIconDialog()">
-                <svg-icon iconPath="bi/search"></svg-icon>
-              </button>
-            </ng-container>
-          </div>
-        </div>
-      </div>
-      <div class="col-8">
-        <div class="mb-3">
-          <label class="form-label text-muted" for="tooltip">提示文字 </label>
-          <input class="form-control" type="text" id="tooltip" name="tooltip"
-            placeholder="请输入提示文字 ..." [(ngModel)]="model.tooltip"
-            [disabled]="!editable"
-          />
-        </div>
+          </nz-form-control>
+        </nz-form-item>
       </div>
     </div>
-    <div class="mb-3">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="isHidden" name="isHidden" [(ngModel)]="model.isHidden" />
-        <label class="form-check-label text-muted" for="isHidden">隐藏菜单项</label>
-      </div>
-    </div>
-    <!-- <hr /> -->
-    <div class="mb-3">
-      <label class="form-label text-muted">菜单角色</label>
-      <div class="mt-0">
-        <div class="form-check form-check-inline form-switch" *ngFor="let role of vm.roles">
-          <input class="form-check-input" type="checkbox" [id]="role.id"
-            [name]="role.name" [disabled]="!editable" [value]="role.name"
-            [checked]="isRoleChecked(role.name)" (change)="toggleCheckedRole(role.name)" />
-          <label class="form-check-label text-muted" [for]="role.id">{{role.description}}</label>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div *ngIf="info.privileges['app_privileges.update'] && editable"
-    class="card-footer d-flex justify-content-between">
-    <button type="button" class="btn btn-sm btn-outline-primary"
+    <nz-form-item>
+      <label id="isHidden" name="isHidden" for="isHidden" nz-checkbox
+        [(ngModel)]="model.isHidden" [nzDisabled]="!editable">隐藏菜单项</label>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-label nzFor="roles">菜单角色</nz-form-label>
+      <nz-form-control>
+        <label *ngFor="let role of vm.roles" class="m-0"
+          nz-checkbox [nzId]="role.id" [for]="role.id"
+          [nzDisabled]="!editable" [nzValue]="role.name"
+          [nzChecked]="isRoleChecked(role.name)"
+          (nzCheckedChange)="toggleCheckedRole(role.name)">{{role.description}}</label>
+      </nz-form-control>
+    </nz-form-item>
+  </form>
+  <ng-template #okTpl>
+    <button *ngIf="info.privileges['app_privileges.update'] && editable"
+      class="float-start ms-4" type="button" nz-button nzType="primary"
       (click)="save()" [disabled]="!detailForm.valid">
-      <svg-icon iconPath="bi/check"></svg-icon> 保存
+      <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 保存
     </button>
-    <button type="button" class="btn btn-sm btn-outline-secondary"
+  </ng-template>
+  <ng-template #cancelTpl>
+    <button class="float-end me-4" type="button" nz-button nzType="default"
       (click)="cancel()">
       <svg-icon iconPath="bi/x"></svg-icon> 取消
     </button>
-  </div>
-</form>
+  </ng-template>
+</nz-card>
