--- a/projects/web/src/app/admin/nav-items/list/list.component.html
+++ b/projects/web/src/app/admin/nav-items/list/list.component.html
@@ -5,8 +5,9 @@
 </nz-breadcrumb>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12">
-      <nz-card *ngIf="(account.info | async) as info" nzTitle="导航菜单"
+    <div class="col">
+      <nz-card *ngIf="(account.info | async) as info"
+        class="ant-card-data-list" nzTitle="导航菜单"
         [nzBodyStyle]="{ padding: '0' }"
         [nzExtra]="cardExtra">
         <ng-template #cardExtra>
@@ -18,120 +19,70 @@
               <svg-icon iconPath="bi/plus"></svg-icon> 新建菜单项
             </button>
             <button nz-button nzType="default"
-              (click)="loadData()">
+              (click)="vm.search()">
               <svg-icon iconPath="bi/arrow-repeat"></svg-icon> 刷新
             </button>
           </nz-button-group>
         </ng-template>
-        <form class="p-2 bg-light">
-          <div class="row">
-            <div class="col-6">
-              <div class="row g-0 align-items-center">
-                <label for="pageSize" class="col-auto col-form-label col-form-label-sm">
-                  显示：
-                </label>
-                <div class="col-auto">
-                  <select id="pageSize" name="pageSize"
-                    class="form-select form-select-sm"
-                    [(ngModel)]="vm.searchModel.take"
-                    (change)="vm.onPageSizeChange()">
-                    <option [value]="10">10</option>
-                    <option [value]="25">25</option>
-                    <option [value]="50">50</option>
-                    <option [value]="100">100</option>
-                  </select>
-                </div>
-                <div class="col-auto text-muted px-2 py-1">条记录</div>
-                <div class="col-auto text-muted px-2">
-                  <ng-container *ngIf="vm.loading">
-                    <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 加载中...
-                  </ng-container>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row g-0">
-                <div class="col-6">
-                  <!-- <span class="text-muted">其它工具栏</span> -->
-                </div>
-                <div class="col-6">
-                  <!-- <span class="text-muted">其它工具栏</span> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </form>
         <div class="table-responsive" *ngIf="(vm.data | async) as data">
-          <nz-table #table [nzData]="data">
+          <nz-table nzSize="small" [nzFrontPagination]="false"
+            [nzShowSizeChanger]="true"
+            [nzShowPagination]="true"
+            [nzShowQuickJumper]="vm.showPagination"
+            [nzData]="data"
+            [nzTotal]="(vm.total | async)!"
+            [nzShowTotal]="totalTpl"
+            [nzLoading]="vm.loading"
+            (nzQueryParams)="loadData($event)">
             <thead>
               <tr>
-                <th scope="col" class="text-end text-nowrap text-muted table-row-num-col">#</th>
-                <th scope="col" class="text-start text-nowrap text-muted">标题</th>
-                <th scope="col" class="text-start text-nowrap text-muted">提示文字</th>
-                <th scope="col" class="text-start text-nowrap text-muted">图标</th>
-                <th scope="col" class="text-start text-nowrap text-muted">导航地址</th>
-                <th scope="col" class="text-center text-nowrap text-muted">顺序</th>
-                <th scope="col" class="text-center text-nowrap text-muted table-action-col-3">操作</th>
+                <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
+                <th scope="col" class="text-start text-nowrap">标题</th>
+                <th scope="col" class="text-start text-nowrap">提示文字</th>
+                <th scope="col" class="text-start text-nowrap">图标</th>
+                <th scope="col" class="text-start text-nowrap">导航地址</th>
+                <th scope="col" class="text-center text-nowrap">顺序</th>
+                <th scope="col" class="text-center text-nowrap table-action-col-3">操作</th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let item of table.data; let i = index;">
-                <th scope="row" class="text-end text-muted">{{i+1+vm.searchModel.skip}}</th>
+              <tr *ngFor="let item of data; let i = index;">
+                <th scope="row" class="text-end">{{i+1+vm.searchModel.skip}}</th>
                 <td class='text-start'>{{item.title}}</td>
                 <td class='text-start'>{{item.tooltip}}</td>
                 <td class='text-start'><svg-icon *ngIf="item.icon" iconClass="bi" [iconPath]="item.icon"></svg-icon> {{item.icon}}</td>
                 <td class='text-start'>{{item.url}}</td>
                 <td class='text-end'>{{item.sequence}}</td>
                 <td class="text-center">
-                  <div class="btn-group btn-group-sm">
+                  <nz-button-group>
                     <button *ngIf="info.privileges['app_nav_items.read']"
-                      class="btn btn-outline-secondary" ngbTooltip="详情" placement="top" [openDelay]="300"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="详情" nzTooltipPlacement="top"
                       (click)="showDetail(item.id, false)">
                       <svg-icon iconPath="bi/info-square"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_nav_items.update']"
-                      class="btn btn-outline-secondary" ngbTooltip="编辑" placement="top" [openDelay]="300"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="编辑" nzTooltipPlacement="top"
                       (click)="showDetail(item.id, true)">
                       <svg-icon iconPath="bi/pencil-square"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_nav_items.delete']"
-                        class="btn btn-outline-secondary" ngbTooltip="删除" placement="top" [openDelay]="300"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="删除" nzTooltipPlacement="top"
                       (click)="delete(item.id)">
                       <svg-icon iconPath="bi/trash"></svg-icon>
                     </button>
-                  </div>
+                  </nz-button-group>
                 </td>
               </tr>
             </tbody>
           </nz-table>
         </div>
-        <div class="card-footer">
-          <div *ngIf="(vm.data | async) as data" class="row g-0">
-            <div class="col-6 d-flex align-items-center">
-              <div [class]="data.length > 0 ? 'text-muted' : 'text-warning'">
-                <ng-container *ngIf="data.length > 0;else emptyTpl">
-                  显示 {{vm.total | async}} 条记录中的第 {{vm.searchModel.skip + 1}} 至 {{vm.searchModel.skip + data.length}} 条
-                </ng-container>
-                <ng-template #emptyTpl>无数据！</ng-template>
-              </div>
-            </div>
-            <div class="col-6">
-              <ngb-pagination *ngIf="vm.showPagination"
-                class="d-flex justify-content-end"
-                size="sm"
-                [collectionSize]="(vm.total | async) || 0"
-                [page]="(vm.searchModel.skip / vm.searchModel.take) + 1"
-                [pageSize]="vm.searchModel.take"
-                [maxSize]="5"
-                [rotate]="true"
-                [boundaryLinks]="true"
-                [ellipses]="true"
-                (pageChange)="vm.onPageChange($event)">
-              </ngb-pagination>
-            </div>
-          </div>
-        </div>
       </nz-card>
+      <ng-template #totalTpl let-total let-range="range">
+        当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
+      </ng-template>
     </div>
   </div>
 </div>
