--- a/projects/web/src/styles.css
+++ b/projects/web/src/styles.css
@@ -135,3 +135,25 @@ ngb-pagination ul.pagination {
 .cdk-overlay-container {
   z-index: 1056 !important;
 }
+
+.ant-card-data-list {
+  height: calc(100vh - 120px);
+  overflow: auto;
+}
+
+.ant-card-data-list .ant-card-body {
+  padding: 0 !important;
+}
+
+.ant-card-data-detail {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.ant-card-data-detail .ant-card-body {
+  flex: 1 !important;
+  display: block;
+  overflow-x: auto;
+  overflow-y: auto;
+}
