revert to use checkbox

--- a/projects/web/src/app/admin/nav-items/detail/detail.component.html
+++ b/projects/web/src/app/admin/nav-items/detail/detail.component.html
@@ -121,12 +121,8 @@
       </div>
     </div>
     <nz-form-item>
-      <label class="d-flex align-items-center" for="isHidden">
-        <span class="me-2">隐藏菜单项</span>
-        <nz-switch nzId="isHidden" id="isHidden" name="isHidden" nzSize="default"
-          [(ngModel)]="model.isHidden" [nzDisabled]="!editable"
-        />
-      </label>
+      <label id="isHidden" name="isHidden" for="isHidden" nz-checkbox
+        [(ngModel)]="model.isHidden" [nzDisabled]="!editable">隐藏菜单项</label>
     </nz-form-item>
     <nz-form-item>
       <nz-form-label nzFor="roles">菜单角色</nz-form-label>
