--- a/projects/web/src/app/common/nav-sidebar/nav-sidebar.component.html
+++ b/projects/web/src/app/common/nav-sidebar/nav-sidebar.component.html
@@ -10,10 +10,10 @@
     [ngbTooltip]="collapsed ? '打开侧边栏' : null" [openDelay]="500" placement="right"
     container="body">
     <ng-container *ngIf="collapsed; else expandTpl">
-      <svg-icon class="ms-2" path="bi/chevron-double-right"></svg-icon>
+      <svg-icon class="ms-2" iconPath="bi/chevron-double-right"></svg-icon>
     </ng-container>
     <ng-template #expandTpl>
-      <svg-icon class="ms-2" path="bi/chevron-double-left"></svg-icon>
+      <svg-icon class="ms-2" iconPath="bi/chevron-double-left"></svg-icon>
       <span class="collapse-text ms-1" >收起侧边栏</span>
     </ng-template>
   </div>
